2010-06-12  BVK Chaitanya  <bvk.groups@gmail.com>

	Add "-o grub.iso" like cmdline options support.

	* util/grub-install.in: Improve cmdline option parsing.
	* util/grub-mkconfig.in: Likewise.
	* util/grub-mkrescue.in: Likewise.
	* util/grub-reboot.in: Likewise.
	* util/grub-set-default.in: Likewise.
	* util/i386/efi/grub-install.in: Likewise.
	* util/ieee1275/grub-install.in: Likewise.
	* util/powerpc/ieee1275/grub-mkrescue.in: Likewise.

2010-06-12  Colin Watson  <cjwatson@ubuntu.com>

	* .bzrignore: Ignore 41_custom.

2010-06-12  Thomas Schmitt  <scdbackup@gmx.net>

	* util/grub-mkrescue.in: Pass unrecognized options to xorriso.

2010-06-12  Colin Watson  <cjwatson@ubuntu.com>

	Avoid false positives in fs.lst, partmap.lst, and video.lst due to
	prototype declarations.

	* genmk.rb (PModule::rule): Define GRUB_LST_GENERATOR when
	generating fs, partmap, and video lists.
	* include/grub/fs.h (grub_fs_register): Omit prototype if
	GRUB_LST_GENERATOR is defined.
	* include/grub/partition.h (grub_partition_map_register): Likewise.
	* include/grub/video.h (grub_video_register): Likewise.

2010-06-12  Javier Martín <lordhabbit@gmail.com>

	* include/grub/types.h: Check for GRUB_CPU_SIZEOF_LONG when appropriate.

2010-06-12  Thomas Schmitt  <scdbackup@gmx.net>

	* util/grub-mkrescue.in: Support --xorriso argument.

2010-06-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Use -graft-points instead of -pathspecs.
	Suggested by: Thomas Schmitt.

2010-06-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Add --sort-weight arguments to xorriso.
	Suggested by: Thomas Schmitt.

2010-06-12  Vladimir Serbinenko  <phcoder@gmail.com>

	custom.cfg support.

	* conf/common.rmk (grub-mkconfig_SCRIPTS): Add 41_custom.
	* util/grub.d/41_custom.in: New file.

2010-06-12  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkrescue.in (make_image): Remove sh module, which has
	been merged back into normal.
