@@ -356,12 +356,12 @@ if [ "x${devabstraction_module}" = "x" ] ; then
       else
         install_drive="`$grub_probe --target=drive --device ${install_device}`" || exit 1
       fi
-      install_drive="`echo ${install_drive} | sed -e s/,[0-9]*[a-z]*//g`"
+      install_drive="`echo ${install_drive} | sed -e s/,[a-z0-9,]*//g`"
     fi
     grub_drive="`$grub_probe --target=drive --device ${grub_device}`" || exit 1
 
     # Strip partition number
-    grub_drive="`echo ${grub_drive} | sed -e s/,[0-9]*[a-z]*//g`"
+    grub_drive="`echo ${grub_drive} | sed -e s/,[a-z0-9,]*//g`"
     if [ "$disk_module" = ata ] ; then
         # generic method (used on coreboot and ata mod)
         uuid="`$grub_probe --target=fs_uuid --device ${grub_device}`"
